@@ -1,3 +1,9 @@
+2009-02-13  Ross Burton  <ross@linux.intel.com>
+
+	* src/xutils.c:
+	When fetching properties as strings, handle single valued
+	cardinals too (thanks Keith Swett).
+
 2008-04-21  Ross Burton  <ross@burtonini.com>
 
 	* configure.ac:
